# cbsp-boot-utilities

./: README.md
uefi_capsule_generation/: BinToHex.py  CleanHexFile.py  FVCreation.py  FVCreation_header.py  FirmwarePartitions.md  FvUpdate.xml  FvUpdate_UFS.xml  LICENSE  README.md  SYSFW_VERSION_program.py  UpdateFvXml.py  UpdateJsonParameters.py  XmlFwEntryValidation.py  XmlParser.py  capsule_creator.py  capsule_setup.py  combined_script.py  create_config_json.py  set_dtb_property.py  xblconfig_parser.py
uefi_sec/: Makefile.am  configure.ac  uefi_sec.c  uefi_sec.service
